services/service-b/configuration/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
        - name: service-b
          image: localhost/myapplication/service-b:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          env: [ ]
