services/service-b/configuration/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: service-b
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`service-b.localhost`)
      kind: Rule
      services:
        - name: service-b
          port: 80
